--- a/src/layouts/OneColumn/shared.module.scss
+++ b/src/layouts/OneColumn/shared.module.scss
@@ -11,19 +11,19 @@
 
   &__size {
     &-lg {
-      font-size: 17px;
+      font-size: 1.1rem;
     }
 
     &-md {
-      font-size: 14.5px;
+      font-size: 0.925rem;
     }
 
     &-sm {
-      font-size: 13px;
+      font-size: 0.85rem;
     }
 
     &-xs {
-      font-size: 12px;
+      font-size: 0.75rem;
     }
   }
 }
