--- a/src/components/Base/ChangePrimary/ChangePrimary.module.scss
+++ b/src/components/Base/ChangePrimary/ChangePrimary.module.scss
@@ -34,7 +34,8 @@
   border: none;
   width: 3rem;
 
-  &::-webkit-outer-spin-button, &::-webkit-inner-spin-button {
+  &::-webkit-outer-spin-button,
+  &::-webkit-inner-spin-button {
     -webkit-appearance: none;
   }
 
