--- a/src/layouts/OneColumn/OneColumn.module.scss
+++ b/src/layouts/OneColumn/OneColumn.module.scss
@@ -6,7 +6,12 @@
     font-weight: 400;
   }
 
-  h1, h2, h3, h4, h5, h6 {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
     @extend .text__size-lg;
     font-weight: 600;
   }
