--- a/src/components/Base/Base.module.scss
+++ b/src/components/Base/Base.module.scss
@@ -15,7 +15,15 @@
     margin: 0;
   }
 
-  h1, h2, h3, h4, h5, h6, p, span, strong {
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6,
+  p,
+  span,
+  strong {
     @include mixins.transition(color);
   }
 
