--- a/src/pages/404/404.module.scss
+++ b/src/pages/404/404.module.scss
@@ -27,7 +27,8 @@
   @include mixins.transition(color);
   color: colors.get-color(text);
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     color: colors.get-color(text, hover);
   }
 
@@ -48,7 +49,8 @@
   text-align: center;
   margin-top: 2rem;
 
-  &:hover, &:focus {
+  &:hover,
+  &:focus {
     background-color: colors.get-color(alt-text);
     color: colors.get-color(background);
   }
